# cmoid

./: .gitignore  Cargo.toml
src/: action.rs  cli.rs  lib.rs  main.rs  model.rs
tests/simple/: CMakeLists.txt
