[package]
name = "cmoid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
glob = "0.3.1"
schemars = "0.8.15"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
